# orbnet

./: .gitignore  .mcp.json  LICENSE  MCP_SERVER.md  README.md  prek.toml  pyproject.toml  run_tests.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: check_coverage.yaml  prek.yaml
skills/network-quality/: SKILL.md
skills/network-quality/references/: metrics.md
skills/wifi-diagnostics/: SKILL.md
skills/wifi-diagnostics/references/: wifi-metrics.md
src/orbnet/: __init__.py  client.py  mcp_server.py  models.py
tests/: README.md  __init__.py  conftest.py  test_client.py  test_integration.py  test_mcp_server.py  test_models.py  test_utils.py
